--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/webpack-config": "~0.16.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-native-fontawesome": "^0.2.7",
-    "expo": "~42.0.1",
+    "expo": "^45.0.0",
     "expo-status-bar": "~1.0.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-svg": "^12.1.1",
-    "react-native-web": "~0.13.12"
+    "react": "^17.0.0",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-svg": "^12.3.1",
+    "react-native-web": "~0.17.7",
+    "webpack-dev-server": "~3.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
